# cv_labs

./: .gitignore  CMakeLists.txt  lab1.cpp  lab1_dop.cpp  lab1_dop2.cpp  lab2.cpp  lab3.cpp
